--- a/.github/workflows/lifecycle.yml
+++ b/.github/workflows/lifecycle.yml
@@ -30,7 +30,7 @@ concurrency: # FIXME: prevent release commit cancellation
 jobs:
   release-please:
     name: Release Please
-    runs-on: blacksmith-2vcpu-ubuntu-2204
+    runs-on: ubuntu-2404
     outputs:
       release_created: ${{ steps.release-please.outputs.release_created }}
       tag_name: ${{ steps.release-please.outputs.tag_name }}
@@ -49,13 +49,13 @@ jobs:
     if: github.event.action != 'closed'
     name: Construct matrices
     needs: release-please
-    runs-on: blacksmith-2vcpu-ubuntu-2204
+    runs-on: ubuntu-2404
     outputs:
       build-matrix: ${{ steps.matrices.outputs.build-matrix }}
       run-matrix: ${{ steps.matrices.outputs.run-matrix }}
     steps:
       - name: Checkout 
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
+        uses: actions/checkout@v4
         with:
           fetch-depth: 1
           ref: ${{ inputs.ref || github.ref }}
@@ -220,7 +220,7 @@ jobs:
     needs:
       - matrices
       - build
-    runs-on: blacksmith-2vcpu-ubuntu-2204
+    runs-on: ubuntu-2404
     strategy:
       fail-fast: false
       matrix:
@@ -228,12 +228,12 @@ jobs:
         xvfb: [true, false]
     steps:
       - name: Checkout # TODO: simplify away this step, currently needed for `uses: ./`
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
+        uses: actions/checkout@v4
         with:
           fetch-depth: 1
 
       - name: Download artifact
-        uses: actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16 # v4
+        uses: actions/download-artifact@v4
         with:
           name: jars-${{ matrix.version.mc }}
 
@@ -243,10 +243,11 @@ jobs:
           cp mc-runtime-test-*-${{ matrix.version.type }}-release.jar run/mods
 
       - name: Setup Java temurin-${{ matrix.version.java }}
-        uses: useblacksmith/setup-java@ffdcc086410416d16bc6eebdf2412fa3b37823d9 # v5
+        uses: null2264/actions/gradle-java-setup@363cb9cf3d66bd9c72ed6860142c6b2c121d7e94
         with:
+          distro: temurin
           java-version: ${{ matrix.version.java }}
-          distribution: temurin
+          gradle-enable-setup: false
 
       - name: Run game
         timeout-minutes: 3
@@ -268,10 +269,10 @@ jobs:
     name: Release
     permissions:
       contents: write
-    runs-on: blacksmith-2vcpu-ubuntu-2204
+    runs-on: ubuntu-2404
     steps:
       - name: Download artifacts
-        uses: actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16 # v4
+        uses: actions/download-artifact@v4
 
       - name: Upload release artifacts
         uses: svenstaro/upload-release-action@04733e069f2d7f7f0b4aebc4fbdbce8613b03ccd # v2
@@ -296,7 +297,7 @@ jobs:
     needs:
       - run
       - release
-    runs-on: blacksmith-2vcpu-ubuntu-2204
+    runs-on: ubuntu-2404
     steps:
       - name: Delete artifacts
         uses: geekyeggo/delete-artifact@f275313e70c08f6120db482d7a6b98377786765b # v5.1.0
