--- a/.github/workflows/lifecycle.yml
+++ b/.github/workflows/lifecycle.yml
@@ -95,11 +95,11 @@ jobs:
             {"dir": "1_21", "mc": "1.21.3", "lex": "53.0.7", "neo": "11-beta", "java": "21"},
             {"dir": "1_21", "mc": "1.21.1", "lex": "52.0.2", "neo": "4", "java": "21"},
             {"dir": "1_21", "mc": "1.21", "lex": "51.0.24", "neo": "96-beta", "java": "21"},
-            {"dir": "1_20/1_20_6", "mc": "1.20.6", "lex": "50.1.10", "neo": "119", "java": "21"},
+            {"dir": "1_20_6", "mc": "1.20.6", "lex": "50.1.10", "neo": "119", "java": "21"},
             {"dir": "1_20", "mc": "1.20.4", "lex": "49.0.38", "neo": "219", "java": "17"},
             {"dir": "1_20", "mc": "1.20.3", "lex": "49.0.2", "neo": "8-beta", "java": "17"},
             {"dir": "1_20", "mc": "1.20.2", "lex": "48.1.0", "neo": "88", "java": "17"},
-            {"dir": "1_20/1_20_1", "mc": "1.20.1", "lex": "47.2.23", "java": "17"},
+            {"dir": "1_20_1", "mc": "1.20.1", "lex": "47.2.23", "java": "17"},
             {"dir": "1_19", "mc": "1.19.4", "lex": "45.2.9", "java": "17"},
             {"dir": "1_19", "mc": "1.19.3", "lex": "44.1.23", "java": "17"},
             {"dir": "1_19", "mc": "1.19.2", "lex": "43.3.9", "java": "17"},
