--- a/.github/workflows/flex-build.yml
+++ b/.github/workflows/flex-build.yml
@@ -55,7 +55,7 @@ jobs:
         uses: null2264/actions/gradle-java-setup@363cb9cf3d66bd9c72ed6860142c6b2c121d7e94
         with:
           distro: temurin
-          java-version: ${{ inputs.java }}
+          java: ${{ inputs.java }}
 
       - if: |
           steps.cache.outputs.cache-hit != 'true'
