--- a/.github/workflows/lifecycle.yml
+++ b/.github/workflows/lifecycle.yml
@@ -91,10 +91,10 @@ jobs:
 
           build_data = [
             {"dir": "api", "java": "8"},
-            {"dir": "1_21", "mc": "1.21.4", "lex": "54.0.16", "neo": "50-beta", "java": "21"},
-            {"dir": "1_21", "mc": "1.21.3", "lex": "53.0.7", "neo": "11-beta", "java": "21"},
-            {"dir": "1_21", "mc": "1.21.1", "lex": "52.0.2", "neo": "4", "java": "21"},
-            {"dir": "1_21", "mc": "1.21", "lex": "51.0.24", "neo": "96-beta", "java": "21"},
+            {"dir": "1_21", "mc": "1.21.4", "lex": "54.1.0", "neo": "124", "java": "21"},
+            {"dir": "1_21", "mc": "1.21.3", "lex": "53.1.0", "neo": "66", "java": "21"},
+            {"dir": "1_21", "mc": "1.21.1", "lex": "52.1.0", "neo": "143", "java": "21"},
+            {"dir": "1_21", "mc": "1.21", "lex": "51.0.33", "neo": "167", "java": "21"},
             {"dir": "1_20_6", "mc": "1.20.6", "lex": "50.1.10", "neo": "119", "java": "21"},
             {"dir": "1_20", "mc": "1.20.4", "lex": "49.0.38", "neo": "219", "java": "17"},
             {"dir": "1_20", "mc": "1.20.3", "lex": "49.0.2", "neo": "8-beta", "java": "17"},
@@ -246,7 +246,7 @@ jobs:
         uses: null2264/actions/gradle-java-setup@363cb9cf3d66bd9c72ed6860142c6b2c121d7e94
         with:
           distro: temurin
-          java-version: ${{ matrix.version.java }}
+          java: ${{ matrix.version.java }}
           gradle-enable-setup: false
 
       - name: Run game
