--- a/.github/workflows/run-gametests.yml
+++ b/.github/workflows/run-gametests.yml
@@ -54,7 +54,7 @@ jobs: # TODO: add cleanup job
         uses: null2264/actions/gradle-java-setup@363cb9cf3d66bd9c72ed6860142c6b2c121d7e94
         with:
           distro: temurin
-          java-version: ${{ matrix.version.java }}
+          java: ${{ matrix.version.java }}
           gradle-enable-setup: false
 
       - name: Run game
