--- a/.github/workflows/test-local-action.yml
+++ b/.github/workflows/test-local-action.yml
@@ -53,7 +53,7 @@ jobs:
         uses: null2264/actions/gradle-java-setup@363cb9cf3d66bd9c72ed6860142c6b2c121d7e94
         with:
           distro: temurin
-          java-version: ${{ matrix.version.java }}
+          java: ${{ matrix.version.java }}
           gradle-enable-setup: false
 
       - name: Run game
