--- a/.github/workflows/run-gametests.yml
+++ b/.github/workflows/run-gametests.yml
@@ -41,6 +41,11 @@ jobs: # TODO: add cleanup job
           - { mc: 1.20.4, type: fabric, modloader: fabric, regex: .*fabric.*, java: 17 }
     runs-on: ubuntu-24.04
     steps:
+      - name: Checkout # TODO: simplify away this step, currently needed for `uses: ./`
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 1
+
       - name: Download artifacts
         uses: actions/download-artifact@v4
 
