fix: Fix cache key

--- a/.github/workflows/flex-build.yml
+++ b/.github/workflows/flex-build.yml
@@ -48,7 +48,7 @@ jobs:
         uses: actions/cache@v4
         with:
           path: ${{ inputs.dir }}/build
-          key: build-${{ hashFiles(format('{0}/[a-z]**', inputs.dir), 'api/**') }}
+          key: build-${{ hashFiles(format('{0}/[a-z]**', inputs.dir), 'api/**') }}-${{ inputs.mc || inputs.dir }}
 
       - if: steps.cache.outputs.cache-hit != 'true'
         name: Setup Java and Gradle
