--- a/.github/workflows/lifecycle.yml
+++ b/.github/workflows/lifecycle.yml
@@ -91,6 +91,7 @@ jobs:
 
           build_data = [
             {"dir": "api", "java": "8"},
+            {"dir": "1_21_5", "mc": "1.21.5", "lex": "55.0.3", "neo": "23-beta", "java": "21"},
             {"dir": "1_21", "mc": "1.21.4", "lex": "54.1.0", "neo": "124", "java": "21"},
             {"dir": "1_21", "mc": "1.21.3", "lex": "53.1.0", "neo": "66", "java": "21"},
             {"dir": "1_21", "mc": "1.21.1", "lex": "52.1.0", "neo": "143", "java": "21"},
@@ -114,6 +115,9 @@ jobs:
           ]
 
           run_data = [
+            {"mc": "1.21.5", "type": "lexforge", "modloader": "forge", "regex": ".*forge.*", "java": "21"},
+            {"mc": "1.21.5", "type": "neoforge", "modloader": "neoforge", "regex": ".*neoforge.*", "java": "21"},
+            {"mc": "1.21.5", "type": "fabric", "modloader": "fabric", "regex": ".*fabric.*", "java": "21"},
             {"mc": "1.21.4", "type": "lexforge", "modloader": "forge", "regex": ".*forge.*", "java": "21"},
             {"mc": "1.21.4", "type": "neoforge", "modloader": "neoforge", "regex": ".*neoforge.*", "java": "21"},
             {"mc": "1.21.4", "type": "fabric", "modloader": "fabric", "regex": ".*fabric.*", "java": "21"},
